# easy-proton-ui

./: .gitignore  CHANGELOG.md  GAMESCOPE_FIX_FINAL.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release-simple.sh  release.sh  test-release-simple.sh  test-release.sh
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  launcher.rs  mod.rs  process.rs
src-tauri/src/domain/: config.rs  mod.rs
src-tauri/src/services/: config_store.rs  mod.rs  process.rs  proton.rs
src-tauri/src/state/: mod.rs
src/components/: EditModal.tsx  GameCard.tsx  GamescopeConfig.tsx  PathSelector.tsx
