[package]
name = "easy-proton-ui"
version = "0.1.0"
description = "A lightweight, Rust-powered Proton launcher for Linux, specifically optimized for Galgame compatibility and simplified prefix management."
authors = ["wucai"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "easy_proton_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-store = "2.4.2"
image = "0.25.9"
ico = "0.5.0"
